# solarstats

./: .gitignore  README.md  engine.py  pyproject.toml  requirements.txt  solarstats.py  solarstats.service  solarstats.simulated.sqlite  solarstats.sqlite  solarstats.sqlite.bak  test.sqlite
config/: README.md  __init__.py
docs/: diy_rs232_cable.md
probes/: __init__.py  probe.py  psutil.py  registry.py
probes/renogy/: __init__.py  renogy_rover.py  renogy_rover_sim.py  types.py
scripts/: install-python.sh  install-service.sh  install-venv.sh  install.sh  run.sh
scripts/systemd/: solarstats.service  solarstats.service.template
solarshed/: server.py
tests/: test_config.py  test_engine.py
tests/probes/renogy/: test_renogy_rover.py
tests/probes/renogy/fakes/: fake_modbus.py
tests/writers/: test_sql.py
writers/: __init__.py  http.py  sql.py
