[tool.poetry]
name = "solarstats"
version = "0.1.0"
description = "solarstats"
authors = ["Brian S. Corbin <corbinbs@engineer1.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
MinimalModbus = "1.0.2"
pyserial = "3.5"
prometheus_client = "0.9.0"
pyyaml = "^6.0.1"
sqlalchemy = "^2.0.21"
poetry = "^1.6.1"

[tool.poetry.group.dev.dependencies]
pdbpp = "^0.10.3"
pytest = "^6.2.2"
ipython = "^8.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
